test_outputs/connlist/exposure_test_with_anp_16_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'hello-world/allow-ingress-and-egress-in-entire-cluster' selects hello-world/workload-a[Deployment], but 0.0.0.0-255.255.255.255 is not allowed by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'hello-world/allow-ingress-and-egress-in-entire-cluster' selects hello-world/workload-a[Deployment], but 0.0.0.0-255.255.255.255 is not allowed by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'hello-world/allow-ingress-and-egress-in-entire-cluster' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'hello-world/allow-ingress-and-egress-in-entire-cluster' allows connections by Ingress rule #1


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	[all namespaces]/[pod with {role=monitoring}] : No Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : All Connections
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	[all namespaces]/[pod with {role=monitoring}] : No Connections
hello-world/workload-a[Deployment] 	<= 	entire-cluster : All Connections
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
